/*
 * Copyright 2022 Arrikto Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api;
option go_package = "github.com/feast-dev/feast/backend/api/go_client";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  responses: {
    key: "default";
    value: {
      schema: {
        json_schema: {
          ref: ".api.Status";
        }
      }
    }
  }
  // Use bearer token for authorizing access to infra object service.
  security_definitions: {
    security: {
      key: "Bearer";
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "authorization";
      }
    }
  }
  security: {
    security_requirement: {
      key: "Bearer";
      value: {};
    }
  }
};

service InfraObjectService {
  rpc UpdateInfraObjects (UpdateInfraObjectsRequest) returns (UpdateInfraObjectsResponse) {
    option (google.api.http) = {
      post: "/UpdateInfraObjects",
      body: "infra_objects"
    };
  }

  rpc ListInfraObjects (ListInfraObjectsRequest) returns (ListInfraObjectsResponse) {
    option (google.api.http) = {
      get: "/ListInfraObjects"
    };
  }
}

message UpdateInfraObjectsRequest {
  InfraObjects infra_objects = 1;
  string project = 2;
}

message UpdateInfraObjectsResponse {
  repeated InfraObject infra_objects = 1;
}

message ListInfraObjectsRequest {
  string project = 1;
}

message ListInfraObjectsResponse {
  repeated InfraObject infra_objects = 1;
}

message InfraObject {
    // Represents the Python class for the infrastructure object.
    string infra_object_class_type = 1;

    // The infrastructure object.
    // Protobuf object transformed to a JSON string.
    string infra_object = 2;
}

message InfraObjects {
  repeated InfraObject objects = 1;
}
